--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -3,7 +3,6 @@
 @import './components/Candidates';
 @import './components/CandidatesList';
 @import './components/Dashboard';
-@import './components/DashboardCandidates';
 @import './components/Details';
 @import './components/Editor';
 @import './components/Footer';
@@ -18,3 +17,6 @@
 @import './components/SearchCandidate';
 @import './components/SearchDashboard';
 @import './components/Welcome';
+@import './components/Login';
+@import './components/LoginGoogle';
+@import './components/Register';
