--- a/client/src/styles/views/_App.scss
+++ b/client/src/styles/views/_App.scss
@@ -1,2 +1,19 @@
 @import '../utils/mixins.scss';
 @import '../utils/variables.scss';
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-color: $white;
+    margin: 0;
+  }
+  
+  .container {
+    width: 90%;
+    max-width: 400px;
+    padding: 1rem;
+    box-sizing: border-box;
+  }
+  
