add changes styles main - footer ok

--- a/client/src/styles/components/_Footer.scss
+++ b/client/src/styles/components/_Footer.scss
@@ -1,2 +1,71 @@
 @import '../utils/mixins.scss';
 @import '../utils/variables.scss';
+
+footer {
+    margin-top: 20px;
+    background-color: $green;
+    color: $white;
+    padding: 2rem;
+    text-align: center;
+  
+    .footer-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+  
+      .logo {
+        img {
+          max-width: 150px;
+        }
+      }
+
+      .footer-social {
+        display: flex;
+        gap: 1rem;
+  
+        a {
+          color: $white;
+          font-size: 1.5rem;
+          transition: color 0.3s ease;
+  
+          &:hover {
+            color: $yellow;
+          }
+        }
+      }
+  
+      .footer-info {
+        font-size: 0.875rem;
+        color: $white;
+
+        p{
+            font-weight: bold;
+        }
+      }
+    }
+  }
+  
+  @media (min-width: 768px) {
+    footer .footer-content {
+      flex-direction: column;
+      justify-content: space-between;
+  
+      .logo,
+      .footer-social,
+      .footer-info {
+        flex: 1;
+        text-align: left;
+      }
+      .footer-social {
+        justify-content: flex-end;
+      }
+    }
+  }
+
+  .footer-info p a{
+    list-style: none;
+    color: white;
+    text-decoration: none;
+  }
