--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -3,6 +3,7 @@
 @import './components/Candidates';
 @import './components/CandidatesList';
 @import './components/Dashboard';
+@import './components/Database';
 @import './components/Details';
 @import './components/Editor';
 @import './components/Footer';
