--- a/client/src/styles/components/_CandidatesList.scss
+++ b/client/src/styles/components/_CandidatesList.scss
@@ -1,2 +1,33 @@
 @import '../utils/mixins.scss';
 @import '../utils/variables.scss';
+
+.candidatesList {
+    display: inline-flex;
+    flex-direction: column;
+    width: 18.7%;
+    margin-right: 15px;
+    margin-top: 15px;
+    align-items: center;
+    justify-content: flex-start;
+    background-color: #eff4f9;
+    border-top: 4px solid $dark_blue;
+    border-radius: 5px;
+    box-sizing: border-box;
+}
+
+.candidatesList a {
+    display: inline-block;
+    text-decoration: none;
+    width: auto;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.titleList {
+    margin-right: auto;
+    margin-left: 16px;
+    font-weight: 550;
+    color: $dark_blue;
+}
