--- a/client/src/styles/components/_CandidatesList.scss
+++ b/client/src/styles/components/_CandidatesList.scss
@@ -9,8 +9,8 @@
     margin-top: 15px;
     align-items: center;
     justify-content: flex-start;
-    background-color: #eff4f9;
-    border-top: 4px solid $dark_blue;
+    background-color: white;
+    border: 1.3px solid rgba(128, 128, 128, 0.311);
     border-radius: 5px;
     box-sizing: border-box;
 }
@@ -18,7 +18,7 @@
 .candidatesList a {
     display: inline-block;
     text-decoration: none;
-    width: auto;
+    width: 90%;
     height: auto;
     margin: 0;
     padding: 0;
@@ -27,7 +27,12 @@
 
 .titleList {
     margin-right: auto;
-    margin-left: 16px;
+    padding:15px 20px;
     font-weight: 550;
     color: $dark_blue;
+    background-color: #f6f7fb;
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: 0;
+    margin-bottom: 0;
 }
