--- a/client/src/styles/components/_Nav.scss
+++ b/client/src/styles/components/_Nav.scss
@@ -1,2 +1,114 @@
-@import '../utils/mixins.scss';
-@import '../utils/variables.scss';
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background-color: #f8f9fa;
+  }
+  
+  .logo img {
+    height: 40px;
+  }
+  
+  .menu {
+    display: flex;
+    gap: 1rem;
+  }
+  
+  .menu a {
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .user-section {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .hamburger {
+    display: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    width: 30px;
+    height: 20px;
+    position: relative;
+  }
+  
+  .hamburger span {
+    display: block;
+    position: absolute;
+    height: 3px;
+    width: 100%;
+    background: #333;
+    border-radius: 3px;
+    opacity: 1;
+    left: 0;
+    transform: rotate(0deg);
+    transition: .25s ease-in-out;
+  }
+  
+  .hamburger span:nth-child(1) {
+    top: 0px;
+  }
+  
+  .hamburger span:nth-child(2) {
+    top: 8px;
+  }
+  
+  .hamburger span:nth-child(3) {
+    top: 16px;
+  }
+  
+  .hamburger.open span:nth-child(1) {
+    top: 8px;
+    transform: rotate(135deg);
+  }
+  
+  .hamburger.open span:nth-child(2) {
+    opacity: 0;
+    left: -60px;
+  }
+  
+  .hamburger.open span:nth-child(3) {
+    top: 8px;
+    transform: rotate(-135deg);
+  }
+  
+  @media (max-width: 800px) {
+    .nav {
+      flex-wrap: wrap;
+    }
+  
+    .hamburger {
+      display: block;
+      order: 1;
+    }
+  
+    .logo {
+      order: 0;
+    }
+  
+    .user-section {
+      order: 2;
+    }
+  
+    .menu {
+      display: none;
+      width: 100%;
+      order: 3;
+    }
+  
+    .mobile-menu {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      padding-top: 1rem;
+    }
+  
+    .mobile-menu a {
+      margin-bottom: 0.5rem;
+    }
+  }
