--- a/client/src/styles/components/_Database.scss
+++ b/client/src/styles/components/_Database.scss
@@ -277,7 +277,7 @@
         width: 100%;
         align-items: center;
         box-sizing: border-box;
-        padding-left: 35px;
+        padding-left: 15px;
         border-bottom: 1px solid rgba(128, 128, 128, 0.201);
     }
 
@@ -330,10 +330,20 @@
         font-size: 15.5px;
         font-weight: 600;
         color: $dark_blue;
-        margin-left: 0px;
+        margin-left: -11px;
         margin-top: 10px;
         margin-bottom: 10px;
         margin-right: 20px;
+    }
+
+    .titleActions {
+        display: flex;
+        font-size: 15.5px;
+        font-weight: 600;
+        color: $dark_blue;
+        margin-left: 78px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .btnfilter {
@@ -344,13 +354,47 @@
         margin-left: 50px;
     }
 
-    .btnfilter0 {
+    .btnfilterName {
         background-color: $dark_blue;
         border: none;
         cursor: pointer;
         padding: 0;
-        margin-left: -10px;
+        margin-left: -18px;
     }
+
+    .btnfilterEmail {
+        background-color: $dark_blue;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        margin-left: 3px;
+    }
+
+    .btnfilterReg {
+        background-color: $dark_blue;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        margin-left: 22px;
+    }
+
+    .btnfilterPhase {
+        background-color: $dark_blue;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        margin-left: 39px;
+    }
+
+    .btnfilterState {
+        background-color: $dark_blue;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        margin-left: 52px;
+    }
+
+
 
     .btnNoFilter {
         display: flex;
@@ -528,7 +572,7 @@
         width: 100%;
         align-items: center;
         box-sizing: border-box;
-        padding-left: 35px;
+        padding-left: 15px;
         border-bottom: 1px solid rgba(128, 128, 128, 0.201);
     }
 
@@ -581,10 +625,20 @@
         font-size: 15.5px;
         font-weight: 600;
         color: $dark_blue;
-        margin-left: 0px;
+        margin-left: -11px;
         margin-top: 10px;
         margin-bottom: 10px;
         margin-right: 20px;
+    }
+
+    .titleActions {
+        display: flex;
+        font-size: 15.5px;
+        font-weight: 600;
+        color: $dark_blue;
+        margin-left: 78px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .btnfilter {
@@ -595,12 +649,44 @@
         margin-left: 50px;
     }
 
-    .btnfilter0 {
+    .btnfilterName {
         background-color: $dark_blue;
         border: none;
         cursor: pointer;
         padding: 0;
-        margin-left: -10px;
+        margin-left: -18px;
+    }
+
+    .btnfilterEmail {
+        background-color: $dark_blue;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        margin-left: 3px;
+    }
+
+    .btnfilterReg {
+        background-color: $dark_blue;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        margin-left: 22px;
+    }
+
+    .btnfilterPhase {
+        background-color: $dark_blue;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        margin-left: 39px;
+    }
+
+    .btnfilterState {
+        background-color: $dark_blue;
+        border: none;
+        cursor: pointer;
+        padding: 0;
+        margin-left: 52px;
     }
 
     .btnNoFilter {
