added mui components to dashboard, details and its subcomponents. added sass styles

--- a/client/src/styles/components/_Dashboard.scss
+++ b/client/src/styles/components/_Dashboard.scss
@@ -1,2 +1,17 @@
 @import '../utils/mixins.scss';
 @import '../utils/variables.scss';
+
+.dashboard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    font-family: $font_principal;
+  
+    > * {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+  }
