--- a/client/src/styles/components/_Login.scss
+++ b/client/src/styles/components/_Login.scss
@@ -49,7 +49,7 @@ form {
       font-weight: bold;
   
       &:hover {
-        background-color: $yellow_ligth;
+        background-color: $yellow_light;
       }
     }
   
