--- a/client/src/styles/components/_Profile.scss
+++ b/client/src/styles/components/_Profile.scss
@@ -1,2 +1,33 @@
 @import '../utils/mixins.scss';
 @import '../utils/variables.scss';
+
+.profile-card {
+  max-width: 600px;
+  width: 100%;
+
+  .profile-content {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  .status-select {
+    .MuiOutlinedInput-notchedOutline {
+      border-color: $green;
+    }
+    &:hover .MuiOutlinedInput-notchedOutline {
+      border-color: darken($green, 10%);
+    }
+    &.Mui-focused .MuiOutlinedInput-notchedOutline {
+      border-color: $green;
+    }
+  }
+
+  .button-toggle {
+    background-color: $yellow;
+    color: $black;
+    &:hover {
+      background-color:$yellow-light;
+    }
+  }
+}
