--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -13,6 +13,7 @@
 @import './components/Nav';
 @import './components/Overview';
 @import './components/Process';
+@import './components/Profile';
 @import './components/Redirector';
 @import './components/SearchCandidate';
 @import './components/SearchDashboard';
