--- a/client/src/styles/components/_Redirector.scss
+++ b/client/src/styles/components/_Redirector.scss
@@ -1,2 +1,21 @@
 @import '../utils/mixins.scss';
 @import '../utils/variables.scss';
+
+.redirector {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    font-family: $font_principal;
+  
+    .MuiButton-root {
+      background-color: $yellow;
+      color: $black;
+      font-family: $font_principal;
+  
+      &:hover {
+        background-color: $yellow_light;
+      }
+    }
+  }
