--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -1,8 +1,8 @@
 $green:#11654D;
-$yellow_ligth:#FDE65B;
+$yellow_light:#FDE65B;
 $yellow:#FFDE00;
 $dark_blue:#362B50;
-$white:#FFFFFF;
+$white:#f7f4ee;
 $black:#000;
 
 $font_principal:"Poppins", sans-serif;
