--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -2,7 +2,7 @@ $green:#11654D;
 $yellow_light:#FDE65B;
 $yellow:#FFDE00;
 $dark_blue:#362B50;
-$white:#f7f4ee;
+$white:#fcfcfc;
 $black:#000;
 
 $font_principal:"Poppins", sans-serif;
