--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import './views/App';
+@import './components/Analytics';
 @import './components/CandidateCard';
 @import './components/Candidates';
 @import './components/CandidatesList';
