--- a/client/src/styles/components/_Database.scss
+++ b/client/src/styles/components/_Database.scss
@@ -151,7 +151,7 @@
 }
 
 .btnDatabase {
-    background-color: $dark_blue;
+    background-color: #f6f7fb;
     color: white;
     font-weight: 600;
     font-size: 14px;
@@ -166,7 +166,22 @@
 }
 
 .btnDatabase:hover {
-    background-color: #2e2542;
+    background-color: #e4e5e8;
+}
+
+.divActions {
+    display: flex;
+    align-items: center;
+}
+
+.iconEye {
+    width: 20px;
+    height: 20px;
+}
+
+.iconActivate {
+    width: 20px;
+    height: 20px;
 }
 
 .searchDatabase {
@@ -445,7 +460,7 @@
     }
 
     .btnDatabase {
-        background-color: $dark_blue;
+        background-color: #f6f7fb;
         color: white;
         font-weight: 600;
         font-size: 14px;
@@ -460,7 +475,7 @@
     }
 
     .btnDatabase:hover {
-        background-color: #2e2542;
+        background-color: #e4e5e8;
     }
 
     .searchDatabase {
@@ -738,7 +753,7 @@
     }
 
     .btnDatabase {
-        background-color: $dark_blue;
+        background-color: #f6f7fb;
         color: white;
         font-weight: 600;
         font-size: 14px;
@@ -753,7 +768,7 @@
     }
 
     .btnDatabase:hover {
-        background-color: #2e2542;
+        background-color: #e4e5e8;
     }
 
     .searchDatabase {
