--- a/client/src/styles/utils/variables.scss
+++ b/client/src/styles/utils/variables.scss
@@ -5,5 +5,9 @@ $dark_blue:#362B50;
 $white:#fcfcfc;
 $black:#000;
 
+$primary-color: #11654D;
+$completed-color: #4caf50;
+$error-color: #f44336;
+
 $font_principal:"Poppins", sans-serif;
 
