--- a/client/src/styles/components/_Login.scss
+++ b/client/src/styles/components/_Login.scss
@@ -1,61 +1,48 @@
 @import '../utils/variables.scss';
 
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    background-color: $dark_blue;
-    padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba($black, 0.1);
-    width: 100%;
-    box-sizing: border-box;
-  
-    div {
-      display: flex;
-      flex-direction: column;
-  
-      label {
-        color: $white;
-        margin-bottom: 0.5rem;
-      }
-  
-      input, select {
-        padding: 0.5rem;
-        border: 2px solid $yellow;
-        border-radius: 50px;
-        background-color: $white;
-        color: $black;
-        cursor: pointer;
-  
-        &:focus {
-          outline: none;
-          border-color: $green;
-          box-shadow: 0 0 0 2px rgba($green, 0.2);
-        }
-      }
-      
-    }
+.login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: $white;
+  margin-top: 20px;
+}
 
-    button {
-      padding: 0.75rem;
-      border: none;
-      border-radius: 50px;
-      background-color: $yellow;
-      color: $dark_blue;
-      cursor: pointer;
-      font-size: 1rem;
-      transition: background-color 0.3s ease;
-      font-weight: bold;
-  
-      &:hover {
-        background-color: $yellow_light;
-      }
-    }
-  
-    p {
-      margin-top: 1rem;
-      color: $yellow;
-      font-weight: bold;
-    }
+.login-card {
+  padding: 2rem;
+  width: 100%;
+  max-width: 400px;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+.login-button {
+  margin-top: 1rem;
+  background-color: $green;
+  color: $white;
+  &:hover {
+    background-color: darken($green, 10%);
   }
+}
+
+.MuiOutlinedInput-root {
+  .MuiOutlinedInput-notchedOutline {
+    border-color: $green;
+  }
+  &:hover .MuiOutlinedInput-notchedOutline {
+    border-color: darken($green, 10%);
+  }
+  &.Mui-focused .MuiOutlinedInput-notchedOutline {
+    border-color: $green;
+  }
+}
+
+.MuiInputLabel-root {
+  color: $green;
+  &.Mui-focused {
+    color: $green;
+  }
+}
