--- a/client/src/styles/components/_LoginGoogle.scss
+++ b/client/src/styles/components/_LoginGoogle.scss
@@ -1,26 +1,13 @@
 @import '../utils/variables.scss';
 
-.google-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.75rem;
-  border: 1px solid $yellow;
-  border-radius: 50px;
-  background-color: $white;
-  transition: background-color 0.3s ease;
-  width: 100%;
-  box-sizing: border-box;
+.login-google-container {
   margin-top: 1rem;
+}
 
-  img {
-    width: 24px;
-    height: 24px;
-    margin-right: 0.5rem;
-    border-radius: 10px;
-  }
-
+.google-button {
+  color: $dark_blue !important;
+  border-color: $dark_blue !important;
   &:hover {
-    background-color: $yellow;
+    background-color: rgba($dark_blue, 0.04);
   }
 }
