added mui to academic and experience forms

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -22,3 +22,5 @@
 @import './components/Login';
 @import './components/LoginGoogle';
 @import './components/Register';
+@import './components/AcademicForm';
+@import './components/ExperienceForm';
