changed language in labels

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -24,3 +24,4 @@
 @import './components/Register';
 @import './components/AcademicForm';
 @import './components/ExperienceForm';
+@import './components/StaffLogin';
