--- a/client/src/styles/components/_Database.scss
+++ b/client/src/styles/components/_Database.scss
@@ -184,6 +184,11 @@
     height: 20px;
 }
 
+.iconCV {
+    width: 20px;
+    height: 20px;
+}
+
 .searchDatabase {
     display: block;
     justify-content: flex-start;
