--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -26,3 +26,4 @@
 @import './components/AcademicForm';
 @import './components/ExperienceForm';
 @import './components/StaffLogin';
+@import './components/CandidateForm';
