--- a/client/src/styles/components/_CandidateCard.scss
+++ b/client/src/styles/components/_CandidateCard.scss
@@ -54,6 +54,30 @@
     color: $dark_blue;
 }
 
+.matchRed {
+    margin-left: 10px;
+    margin-top: 15px;
+    font-size: 13px;
+    font-weight: 600;
+    color: red;
+}
+
+.matchYellow {
+    margin-left: 10px;
+    margin-top: 15px;
+    font-size: 13px;
+    font-weight: 600;
+    color: #ffcc00;
+}
+
+.matchGreen {
+    margin-left: 10px;
+    margin-top: 15px;
+    font-size: 13px;
+    font-weight: 600;
+    color: green;
+}
+
 .iconFlechaDcha {
     display: inline-block;
     width: 10px;
@@ -63,7 +87,7 @@
     margin-bottom: 6px;
 }
 
-@media screen and (min-width: 1118px) {
+@media screen and (min-width: 900px) {
     .candidateCard {
         display: flex;
         flex-direction: column;
@@ -93,7 +117,7 @@
         margin-right: auto;
         margin-left: 5px;
         margin-top: 11px;
-        font-size: 14.5px;
+        font-size: 14px;
         color: $dark_blue;
     }
     
@@ -107,15 +131,40 @@
     
     .dateCard {
         margin-left: 4px;
-        font-size: 14px;
+        font-size: 12px;
         color: $dark_blue;
     }
     
     .dateCard2 {
         margin-left: 10px;
-        font-size: 14px;
+        font-size: 12px;
         color: $dark_blue;
     }
+
+    .matchRed {
+        margin-left: 10px;
+        margin-top: 15px;
+        font-size: 12px;
+        font-weight: 600;
+        color: red;
+    }
+
+    .matchYellow {
+        margin-left: 10px;
+        margin-top: 15px;
+        font-size: 12px;
+        font-weight: 600;
+        color: #ffcc00;
+    }
+
+    .matchGreen {
+        margin-left: 10px;
+        margin-top: 15px;
+        font-size: 12px;
+        font-weight: 600;
+        color: green;
+    }
+
     
     .iconFlechaDcha {
         display: inline-block;
