--- a/client/src/styles/components/_Grades.scss
+++ b/client/src/styles/components/_Grades.scss
@@ -2,103 +2,133 @@
 @import '../utils/variables.scss';
 
 .no-grades-response {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
 }
 
 .grades-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  font-family: $font_principal;
+
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .assessment-card {
     width: 100%;
-    font-family: $font_principal;
+    margin-bottom: 30px;
+    background-color: $white;
+    border-radius: 8px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
 
-    h2 {
-        text-align: center;
-        margin-bottom: 20px;
+    h3 {
+      background-color: $green;
+      color: $white;
+      padding: 10px;
+      margin: 0;
+      text-align: center;
     }
 
-    .assessment-card {
+    .chart-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      margin: 20px auto;
+    }
+
+    ul {
+      list-style-type: none;
+      padding:20px;
+      margin: 0;
+
+      li {
+        margin-bottom: 10px;
+        display: flex;
+        justify-content: space-between;
+
+        &:before {
+          content: "•";
+          color: $yellow;
+          font-weight: bold;
+          margin-right: 10px;
+        }
+      }
+    }
+
+    .chart-details {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 0 20px;
+      margin: 10px 0;
+
+      p {
+        margin: 5px 0;
+      }
+    }
+
+    .rating-form {
+      padding: 20px;
+
+      .rating-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 15px;
+      }
+
+      .feedback-input {
         width: 100%;
-        max-width: 600px;
-        margin-bottom: 30px;
-        background-color: $white;
-        border-radius: 8px;
-        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-        overflow: hidden;
+      }
 
-        h3 {
-            background-color: $yellow;
-            color: $black;
-            padding: 10px;
-            margin: 0;
-            text-align: center;
-        }
-
-        .chart-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            max-width: 400px;
-            margin: 20px auto;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0 20px;
-            margin: 0;
-
-            li {
-                margin-bottom: 10px;
-                display: flex;
-                justify-content: space-between;
-
-                &:before {
-                    content: "•";
-                    color: $yellow;
-                    font-weight: bold;
-                    margin-right: 10px;
-                }
-            }
-        }
-
-        .chart-details {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-align: center;
-            padding: 0 20px;
-            margin: 10px 0;
-
-            p {
-                margin: 5px 0;
-            }
-        }
+      .submit-button {
+        display: block;
+        margin: 20px auto 0;
+        background-color: $yellow;
+      color: $black;
+      &:hover {
+        background-color: $yellow-light;
+      }
+      }
     }
+  }
 }
 
 @media (min-width: 768px) {
-    .grades-container {
-        .assessment-card {
-            padding: 20px;
+  .grades-container {
+    .assessment-card {
+      padding: 20px;
 
-            .chart-container {
-                float: left;
-                width: 50%;
-                margin: 0 20px 20px 0;
-            }
+      .chart-container {
+        float: left;
+        width: 50%;
+        margin: 0 20px 20px 0;
+      }
 
-            ul {
-                overflow: hidden;
-            }
+      ul {
+        overflow: hidden;
+      }
+      
+      .rating-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 15px;
+      }
 
-            .chart-details {
-                clear: both;
-                width: 100%;
-            }
-        }
+      .chart-details {
+        clear: both;
+        width: 100%;
+      }
     }
+  }
 }
