--- a/client/src/styles/components/_Redirector.scss
+++ b/client/src/styles/components/_Redirector.scss
@@ -3,7 +3,7 @@
 
 .redirector {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     gap: 20px;
     padding: 20px;
