--- a/client/src/styles/components/_Analytics.scss
+++ b/client/src/styles/components/_Analytics.scss
@@ -161,7 +161,7 @@
 .titleTop {
     text-align: left;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 23px;
     margin-bottom: -5px;
     margin-top: 16px;
 }
@@ -169,8 +169,9 @@
 .titleAnalytics {
     text-align: left;
     font-weight: 600;
-    font-size: 19px;
+    font-size: 17px;
     margin-bottom: 0;
+    margin-top: 8px;
 }
 
 .spanTitleAnalytics {
