--- a/client/src/styles/components/_Dashboard.scss
+++ b/client/src/styles/components/_Dashboard.scss
@@ -2,6 +2,52 @@
 @import '../utils/variables.scss';
 
 .dashboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+  font-family: $font_principal;
+
+  >* {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .sectionDashboard {
+    display: inline-block;
+    border-radius: 5px;
+    box-sizing: border-box;
+    border: 1.3px solid rgba(128, 128, 128, 0.331);
+    background-color: white;
+    overflow: hidden;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 0px;
+    margin-bottom: -2px;
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 100%;
+  }
+}
+
+.divData4 {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-left: -25px;
+  margin-right: -25px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  box-sizing: border-box;
+  flex: 1;
+}
+
+@media screen and (min-width: 1100px) {
+  .dashboard {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,27 +55,40 @@
     max-width: 1200px;
     margin: 0 auto;
     font-family: $font_principal;
-  
-    > * {
+
+    >* {
       width: 100%;
       margin-bottom: 20px;
     }
 
     .sectionDashboard {
       display: inline-block;
-        border-radius: 5px;
-        box-sizing: border-box;
-        border: 1.3px solid rgba(128, 128, 128, 0.331);
-        background-color: #f6f7fb;
-        overflow: hidden;
-        padding-top: 10px;
-        padding-bottom: 20px;
-        padding-left: 20px;
-        padding-right: 20px;
-        margin-top: 10px;
-        margin-bottom: 0px;
-        margin-left: 0px;
-        margin-right: 20px;
-        width: 100%;
+      border-radius: 5px;
+      box-sizing: border-box;
+      border: 1.3px solid rgba(128, 128, 128, 0.331);
+      background-color: #f6f7fb;
+      overflow: hidden;
+      padding-top: 10px;
+      padding-bottom: 20px;
+      padding-left: 20px;
+      padding-right: 20px;
+      margin-top: 10px;
+      margin-bottom: 0px;
+      margin-left: 0px;
+      margin-right: 20px;
+      width: 100%;
     }
   }
+
+  .divData4 {
+    display: block;
+    margin-left: -80px;
+    margin-right: -80px;
+    box-sizing: border-box;
+    flex: 1;
+    margin-top: 11px;
+    margin-bottom: 0px;
+}
+
+
+}
