--- a/client/src/styles/components/_Grades.scss
+++ b/client/src/styles/components/_Grades.scss
@@ -41,12 +41,13 @@
       flex-direction: column;
       align-items: center;
       width: 100%;
+      max-width: 400px;
       margin: 20px auto;
     }
 
     ul {
       list-style-type: none;
-      padding:20px;
+      padding: 20px;
       margin: 0;
 
       li {
@@ -94,13 +95,33 @@
         display: block;
         margin: 20px auto 0;
         background-color: $yellow;
-      color: $black;
-      &:hover {
-        background-color: $yellow-light;
-      }
+        color: $black;
+
+        &:hover {
+          background-color: $yellow-light;
+        }
       }
     }
   }
+}
+
+@media (max-width: 420px) {
+  * {
+    font-size: 0.95rem;
+  }
+  button {
+    font-size: 0.7rem!important;
+  }
+
+  .assessment-card, .chart-container {
+    width: 70%;
+    margin: 0;
+  }
+
+  span {
+    font-size: 1.5rem;
+  }
+
 }
 
 @media (min-width: 768px) {
@@ -116,19 +137,26 @@
 
       ul {
         overflow: hidden;
+        margin: 20px;
+        padding: 20px;
       }
-      
-      .rating-item {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-bottom: 15px;
+
+      li{
+        padding: 5px;
       }
 
       .chart-details {
         clear: both;
         width: 100%;
       }
+      .rating-form {
+        .rating-item {
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+        }
+      }
     }
   }
+
 }
