--- a/client/src/styles/components/_Details.scss
+++ b/client/src/styles/components/_Details.scss
@@ -40,17 +40,14 @@
   }
 }
 
-@media (min-width: 768px) {
-  main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-}
-
 @media (min-width: 1241px) {
   .details-container {
-    width: 60%;
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    .assessment-card {
+      max-width: 60%;
+    }
   }
+
 }
