--- a/client/src/styles/components/_Login.scss
+++ b/client/src/styles/components/_Login.scss
@@ -1,6 +1,11 @@
 @import '../utils/mixins.scss';
 @import '../utils/variables.scss';
 
+a {
+  font-family: $font_principal;
+  margin-top:20px;
+}
+
 .login-container {
   display: flex;
   justify-content: center;
