--- a/client/src/styles/components/_Login.scss
+++ b/client/src/styles/components/_Login.scss
@@ -8,6 +8,16 @@
   background-color: $white;
   margin-top: 20px;
 }
+a.log_opc{
+  text-decoration: none;
+  color: $green;
+  padding: 5px;
+  border-radius: 3px;
+  &:hover{
+    background-color: $green;
+    color: white;
+  }
+}
 
 .login-card {
   padding: 2rem;
@@ -29,6 +39,7 @@
   }
 }
 
+
 .MuiOutlinedInput-root {
   .MuiOutlinedInput-notchedOutline {
     border-color: $green;
@@ -47,3 +58,7 @@
     color: $green;
   }
 }
+
+.bg_color_button{
+  background-color: red;
+  }
