small fixes in staff

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -27,3 +27,4 @@
 @import './components/ExperienceForm';
 @import './components/StaffLogin';
 @import './components/CandidateForm';
+@import './components/Staff';
