--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -28,3 +28,4 @@
 @import './components/StaffLogin';
 @import './components/CandidateForm';
 @import './components/Staff';
+@import './components/UnauthorizedPage';
